update with typescript

--- a/src/splash/splash.html
+++ b/src/splash/splash.html
@@ -35,7 +35,6 @@
       line-height: 20px;
       margin-bottom: 8px;
     }
-
   </style>
 </head>
 
@@ -45,7 +44,7 @@
     <progress id="progressBar" max="100" value="0" style="display: none;"></progress>
   </div>
   <script>
-    const MAIN_MESSAGE = '@electron-delta/updater:main';
+    const MAIN_MESSAGE = '@electron-delta-update/updater:main';
     const statusDom = document.getElementById("status");
     const progressBar = document.getElementById("progressBar");
 
